Add building block readme
